# tickets

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/ffmpegaudioplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: default_user_info.json
app/src/main/cpp/: ffmpegaudioplayer.cpp
app/src/main/java/com/example/ffmpegaudioplayer/: DateUtils.kt  MainActivity.kt  MyApplication.kt  MyFragmentPagerAdapter.kt  SharedPreferencesHelper.kt
app/src/main/java/com/example/ffmpegaudioplayer/adapter/: ReservationAdapter.kt
app/src/main/java/com/example/ffmpegaudioplayer/bean/: CreateOrderResponse.kt  OrderRequest.kt  ReservationResponse.kt  UserInfo.kt
app/src/main/java/com/example/ffmpegaudioplayer/fragment/: DayOfFragment.kt
app/src/main/java/com/example/ffmpegaudioplayer/network/: ApiService.kt  RetrofitUtils.kt
app/src/main/java/com/example/ffmpegaudioplayer/utils/: AppConfig.kt
app/src/main/jniLibs/includes/arm64-v8a/libavutil/: ffversion.h
app/src/main/res/layout/: activity_main.xml  dialog_setting.xml  fragment_day.xml  item_layout.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ffmpegaudioplayer/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
